--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "illuminate/console": "^5.5 || ^6 || ^7",
         "illuminate/filesystem": "^5.5 || ^6 || ^7",
         "illuminate/support": "^5.5 || ^6 || ^7",
-        "phpdocumentor/type-resolver": "^1.1.0"
+        "phpdocumentor/type-resolver": "^1.1.0",
+        "nikic/php-parser": "^4.7"
     },
     "require-dev": {
         "illuminate/config": "^5.5 || ^6 || ^7",
